--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "path": false,
     "os": false
   },
-  "name": "hajarafa",
+  "name": "labina",
   "version": "0.1.0",
   "private": true,
   "scripts": {
